--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "carlos",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.13.1",
     "express": "^4.13.0",
     "mongoose": "^4.0.6"
   },
