--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mean_stack",
   "version": "1.0.0",
   "description": "AngularJS, Express, Node.js, MongoDB",
-  "main": "app.js",
+  "main": "server/app.js",
   "scripts": {
     "build": "browserify ./public/javascript/app.js -o ./public/javascript/bundle.js",
     "test": "echo \"Error: no test specified\" && exit 1"
